--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <title>Himayoun</title>
 </head>
 <body>
+    <div class="preloader">
+        <img src="./preloader/rocket.png" alt="" class="rocket">
+        <h4>Loading...</h4>
+        <img src="./preloader/star.png" alt="" class="star1">
+        <img src="./preloader/star.png" alt="" class="star2">
+        <img src="./preloader/star.png" alt="" class="star3">
+        <img src="./preloader/saturn.png" alt="" class="saturn">
+    </div>
     <section>
         <div id="progressBar"></div>
         <!--<video autoplay muted loop id="myvid">
