--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           </video>-->
     <div class="upper-container">
         <img class = "top_cloud"src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
-        <h1>I'm Himayoun</h1>
-        <p>A <span class="protxt">Pro</span>grammer</p>
+        <h1 class="heading1">I'm Himayoun</h1>
+        <p class="atxt"> A <p class="protxt"> Pro</p>grammer</p>
         <img class="bottom_cloud" src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
         <img class = "mountain-img"src="Images/CSS - My Site Images/CSS - My Site Images/mountain.png" alt="Mountain_img">
     </div>
