Updated College name

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <div class="middle-container">
         <img src="Images/user.png" alt="Profile" class="pic">
-        <p>I'm Himayoun, CSE Student at DTU, intrested in Machine Learning, currently doing DSA in Java.</p>
+        <p>I'm Himayoun, CSE Student at ASC Punjab, intrested in Machine Learning, currently doing DSA in Java.</p>
         <br>
         <hr>
         <div class="skills">
