CloudMove, Edited Texts, cursor set to default.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         <img src="./preloader/saturn.png" alt="" class="saturn">
     </div>
     <section>
-        <div id="progressBar"></div>
-        <!--<video autoplay muted loop id="myvid">
-            <source src="video/City_Blur_Traffic_Cars.mp4" type="video/mp4">
-          </video>-->
+        
     <div class="upper-container">
         <img class = "top_cloud"src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
         <h1 class="heading1">I'm Himayoun</h1>
@@ -38,14 +35,14 @@
     
     <div class="middle-container">
         <img src="Images/user.png" alt="Profile" class="pic">
-        <p>I'm Himayoun, CSE Student at ASC Punjab, intrested in Machine Learning, currently doing DSA in Java.</p>
+        <p>BTech 2026 Grad. currently doing DSA in Java. Intersted in Machine Learning and WebDev.</p>
         <br>
         <hr>
         <div class="skills">
             <h2>My Skills</h2>
             <img src="https://media.giphy.com/media/UVG0BN8TOMKkPOJS6e/giphy.gif" class="skill-img1">
             <h2>Web Developer</h2>
-            <p>So i started my programming journey with web developnment over a year ago. Currently i am into many things that are listed below:</p>
+            <p>i started my programming journey with web developnment. Currently i am into many things that are listed below:</p>
             <img src="Images/Skills/js.png" alt="" class="skills-img">
             <img src="Images/Skills/css.png" alt="" class="skills-img">
             <img src="Images/Skills/html.png" alt="" class="skills-img">
@@ -55,7 +52,7 @@
             <br>
             <img src="https://media.giphy.com/media/paTz7UZbPfTZFRYnnB/giphy.gif" alt="" class="skill-img2">
             <h2>My Project</h2>
-            <p>Currently i'm working on this portfolio, So this is not complete and also not mobile responsive.</p>
+            <p>Currently i have just made this portfolio website and i am doing DSA now, Once i start WebDev. again i will attach my projects here. Until then stay connected.</p>
         </div>
     </div>
     <hr>
