Updated Background Color, Cursor, etc

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
     <div class="upper-container">
         <img class = "top_cloud"src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
-        <h1 class="heading1">I'm Himayoun</h1>
+        <h1 class="heading1">I'm   Himayoun</h1>
         <p class="atxt"> A <p class="protxt"> Pro</p>grammer</p>
         <img class="bottom_cloud" src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
         <img class = "mountain-img"src="Images/CSS - My Site Images/CSS - My Site Images/mountain.png" alt="Mountain_img">
@@ -60,7 +60,7 @@
         <h2>Contact</h2>
         <a href="https://twitter.com/himayou_n?s=09" target="0"><img src="SM SVG/icons8-twitter.svg" alt="" class="twitter"></a>
         <a href="https://github.com/HimAYouN" target="0"><img src="SM SVG/icons8-github.svg" alt="" class="twitter"></a>
-        <a href="#"><img src="SM SVG/icons8-telegram-app.svg" alt="" class="twitter"></a>
+        <a href="#"><img src="SM SVG/icons8-telegram-app.svg" alt="" class="twitter , telegram" ></a>
     </div>
     
 
