--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <img src="./preloader/star.png" alt="" class="star3">
         <img src="./preloader/saturn.png" alt="" class="saturn">
     </div>
-    <section>
-        
+    <section >
+
     <div class="upper-container">
         <img class = "top_cloud"src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
-        <h1 class="heading1">I'm   Himayoun</h1>
+        <h1 class="heading1">I'm   _Himayoun</h1>
         <p class="atxt"> A <p class="protxt"> Pro</p>grammer</p>
         <img class="bottom_cloud" src="Images/CSS - My Site Images/CSS - My Site Images/cloud.png" alt="cloud_img">
         <img class = "mountain-img"src="Images/CSS - My Site Images/CSS - My Site Images/mountain.png" alt="Mountain_img">
