--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <hr>
     <div class="bottom-container">
         <h2>Contact</h2>
-        <a href="https://twitter.com/himayou_n?s=09" target="0"><img src="SM SVG/icons8-twitter.svg" alt="" class="twitter"></a>
+       <a href="https://www.linkedin.com/in/himayoun7931/" target="0">LinkedIn</a>
         <a href="https://github.com/HimAYouN" target="0"><img src="SM SVG/icons8-github.svg" alt="" class="twitter"></a>
         <a href="#"><img src="SM SVG/icons8-telegram-app.svg" alt="" class="twitter , telegram" ></a>
     </div>
