--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skills">
             <h2>My Skills</h2>
             <img src="Images/gifs/giphy(1).webp" class="skill-img1">
-            <h2>Web Developer</h2>
+            <h2>🕸️Web Developer💻</h2>
             <p>i started my programming journey with web developnment. Currently i am into many things that are listed below:</p>
             <img src="Images/Skills/js.png" alt="" class="skills-img">
             <img src="Images/Skills/css.png" alt="" class="skills-img">
@@ -50,14 +50,15 @@
             <img src="Images/Skills/java.png" alt="" class="skills-img">
             <img src="Images/Skills/react.png" alt="" class="skills-img">
             <br>
-            <h2>Graphic Desiner</h2>
+            <h2>📈Graphic Desiner👕</h2>
             <p>Started my Designing journey in 2019, making poster and logo, designing tshirts for Sempai Kart, by using Figma, Canva and Adobe.</p>
             <br>
-            <h2>Problem Solver</h2>
+            <h2>🖥️Problem Solver🔥</h2>
             <p>GFG 250+ problems Solved along with streak of 150+ days, Leetcode 100+ problems Solved.</p>
-
-            
-            
+            <br>
+            <h2>🤖Machine Learning🖲️</h2>
+            <p>Yet to be started... stay tuned.</p>
+            <br>
         </div>
         <img src="Images/gifs/giphy.webp" alt="" class="skill-img2">
         <h2>My Project</h2>
