--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <hr>
     <div class="bottom-container">
-        <h2>Contact</h2>
+        <h2>🤝Connect📧</h2>
         <a href="https://www.linkedin.com/in/himayoun7931/" target="0"><img src="SM SVG/social-linkedin-svgrepo-com.svg" alt="" class="twitter"></a>
         <a href="https://github.com/HimAYouN" target="0"><img src="SM SVG/icons8-github.svg" alt="" class="twitter"></a>
         <a href="#"><img src="SM SVG/icons8-telegram-app.svg" alt="" class="twitter , telegram" ></a>
@@ -83,12 +83,12 @@
 
 
 
-    <div class="jsProject">
+    <!-- <div class="jsProject">
         
         <div class="box"></div>
         <input type="text" id="colorinput">
         <span id = "btn" onclick="colorChange()">Change</span>
-    </div>
+    </div> -->
     </section>
     <script src="file.js"></script>
 </body>
