--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <hr>
         <div class="skills">
-            <h2>My Skills</h2>
+            <h2>🛠️My Skills⚔️</h2>
             <img src="Images/gifs/giphy(1).webp" class="skill-img1">
             <h2>🕸️Web Developer💻</h2>
             <p>i started my programming journey with web developnment. Currently i am into many things that are listed below:</p>
@@ -61,7 +61,7 @@
             <br>
         </div>
         <img src="Images/gifs/giphy.webp" alt="" class="skill-img2">
-        <h2>My Project</h2>
+        <h2>🚀My Project🛸</h2>
 
         <div class="projectsDiv">
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/countDownTimer/index.html"><img src="Images/Projects/countDownTimer.png" alt="project1.img"  class="projects"></a>
