--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/ToDolist/toDoList.html"><img src="Images/Projects/toDoList.jpg" alt="project2.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week3/Rock,Paper,Scissors/index.html"><img src="Images/Projects/rockPaperScissor.jpg" alt="project3.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week3/digital_clock/index.html"><img src="Images/Projects/DigitalClock&QuoteGenerator.jpg" alt="project4.img" class="projects"></a>
-            <a href="https://himayoun.github.io/30DaysOfJs/week4/Image_Slider/index.html"><img src="Images/Projects/oDoList.jpg" alt="project5.img" class="projects"></a>
+            <a href="https://himayoun.github.io/30DaysOfJs/week4/Image_Slider/index.html"><img src="Images/Projects/toDoList.jpg" alt="project5.img" class="projects"></a>
 
         </div>
     </div>
