--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <img src="Images/Skills/python.png" alt="" class="skills-img">
             <img src="Images/Skills/java.png" alt="" class="skills-img">
             <img src="Images/Skills/react.png" alt="" class="skills-img">
+            <img src="Images/Skills/mysql.png" alt="" class="skills-img">
             <br>
             <h2>📈Graphic Desiner👕</h2>
             <p>Started my Designing journey in 2019, making poster and logo, designing tshirts for Sempai Kart, by using Figma, Canva and Adobe.</p>
