--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <img src="Images/Skills/react.png" alt="" class="skills-img">
             <img src="Images/Skills/mysql.png" alt="" class="skills-img">
             <img src="Images/Skills/figma.png" alt="" class="skills-img">
+            <img src="Images/Skills/git.png" alt="" class="skills-img">
+            <img src="Images/Skills/github.png" alt="" class="skills-img">
             <br>
             <h2>📈Graphic Desiner👕</h2>
             <p>Started my Designing journey in 2019, making poster and logo, designing tshirts for Sempai Kart, by using Figma, Canva and Adobe.</p>
