--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
             <img src="Images/gifs/giphy(1).webp" class="skill-img1">
             <h2>🕸️Web Developer💻</h2>
             <p>i started my programming journey with web developnment. Currently i am into many things that are listed below:</p>
-            <img src="Images/Skills/js.png" alt="" class="skills-img">
-            <img src="Images/Skills/css.png" alt="" class="skills-img">
-            <img src="Images/Skills/html.png" alt="" class="skills-img">
-            <img src="Images/Skills/python.png" alt="" class="skills-img">
-            <img src="Images/Skills/java.png" alt="" class="skills-img">
-            <img src="Images/Skills/react.png" alt="" class="skills-img">
-            <img src="Images/Skills/mysql.png" alt="" class="skills-img">
-            <img src="Images/Skills/figma.png" alt="" class="skills-img">
-            <img src="Images/Skills/git.png" alt="" class="skills-img">
-            <img src="Images/Skills/github.png" alt="" class="skills-img">
+            <div class="skillImgsDiv">
+                <img src="Images/Skills/js.png" alt="" class="skills-img">
+                <img src="Images/Skills/css.png" alt="" class="skills-img">
+                <img src="Images/Skills/html.png" alt="" class="skills-img">
+                <img src="Images/Skills/python.png" alt="" class="skills-img">
+                <img src="Images/Skills/java.png" alt="" class="skills-img">
+                <img src="Images/Skills/react.png" alt="" class="skills-img">
+                <img src="Images/Skills/mysql.png" alt="" class="skills-img">
+                <img src="Images/Skills/figma.png" alt="" class="skills-img">
+                <img src="Images/Skills/git.png" alt="" class="skills-img">
+                <img src="Images/Skills/github.png" alt="" class="skills-img">
+
+            </div>
             <br>
             <h2>📈Graphic Desiner👕</h2>
             <p>Started my Designing journey in 2019, making poster and logo, designing tshirts for Sempai Kart, by using Figma, Canva and Adobe.</p>
