updated weather app address

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <h2>🚀My Project🛸</h2>
 
         <div class="projectsDiv">
+            <a href="https://himayoun.github.io/30DaysOfJs/week3/WeatherApp/index.html"><img src="Images/Projects/weatherApp.png" alt="project5.img" class="projects"></a>
+            <a href="https://himayoun.github.io/30DaysOfJs/"><img src="Images/Projects/30daysOfJS.png" alt="30DaysOfJs.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/countDownTimer/index.html"><img src="Images/Projects/countDownTimer.png" alt="project1.img"  class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/ToDolist/toDoList.html"><img src="Images/Projects/toDoList.jpg" alt="project2.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week3/Rock,Paper,Scissors/index.html"><img src="Images/Projects/rockPaperScissor.jpg" alt="project3.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week3/digital_clock/index.html"><img src="Images/Projects/DigitalClock&QuoteGenerator.jpg" alt="project4.img" class="projects"></a>
-            <a href="https://himayoun.github.io/30DaysOfJs/week4/image_Slider/index.html"><img src="Images/Projects/toDoList.jpg" alt="project5.img" class="projects"></a>
-            <a href="https://himayoun.github.io/30DaysOfJs/"><img src="Images/Projects/30daysOfJS.png" alt="30DaysOfJs.img" class="projects"></a>
 
         </div>
     </div>
