--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <div class="middle-container">
         <img src="Images/user.png" alt="Profile" class="pic">
-        <p>BTech 2026 Grad. currently doing DSA in Java. Intersted in Machine Learning and WebDev.</p>
+        <p>I am pursuing B.Tech in Computer Science and Engineering. I have a strong passion for WebDevelopment, and I am excited to further develop my skills and expertise in this field. My goal is to pursue a career in Software Industry, and I am passionate about FrontEnd WebDevelopment and look forward to contribute to projects.</p>
         <br>
         <hr>
         <div class="skills">
