--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="projectsDiv">
             <a href="https://himayoun.github.io/30DaysOfJs/week3/WeatherApp/index.html"><img src="Images/Projects/weatherApp.png" alt="project5.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/"><img src="Images/Projects/30daysOfJS.png" alt="30DaysOfJs.img" class="projects"></a>
-            <a href="https://himayoun.github.io/30DaysOfJs/LearningJSAfter30Days/animePage/index.html"><img src="Images/Projects/animePage.png" alt="AnimePage.img" class="projects"></a>
+            <a href="https://himayoun.github.io/30DaysOfJs/LearningJSAfter30Days/animePage/index.html"><img src="Images/Projects/animePage.jpg" alt="AnimePage.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/countDownTimer/index.html"><img src="Images/Projects/countDownTimer.png" alt="project1.img"  class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week2/moreOnSameTopics/ToDolist/toDoList.html"><img src="Images/Projects/toDoList.jpg" alt="project2.img" class="projects"></a>
             <a href="https://himayoun.github.io/30DaysOfJs/week3/Rock,Paper,Scissors/index.html"><img src="Images/Projects/rockPaperScissor.jpg" alt="project3.img" class="projects"></a>
